--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Muni Sreenivas Pydi"
 title_separator          : "-"
 name                     : &name "Muni Sreenivas Pydi"
-description              : &description "Masters student at UW-Madison"
+description              : &description "PhD student at UW-Madison"
 url                      : https://munisreenivas.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "munisreenivas/munisreenivas.github.io"
